# PTV2-WeldSeg-Deployment

./: .gitignore  LICENSE  README.md  calCulculate.py  calParameters.py  dataset.py  dataset_train_partseg_weld_V2improved.py  export2ONNX.py  predict_partseg_weld.py  predict_partseg_weld2.py  predict_v1.py  testOnnx.py  test_coding.py  train_partseg.py  train_partseg_weld.py  train_partseg_weld_V2.py  train_partseg_weld_V2improved.py  train_partseg_weld_improved.py
config/: ONNXpartseg_v2_improved_predict.yaml  cls.yaml  gcn_res_subdataset_smoke.yaml  partseg-o.yaml  partseg.yaml  partsegSA.yaml  partseg_v2.yaml  partseg_v2_improved.yaml  partseg_v2_improved_predict.yaml
deployment/: gcn_res_onnx_model.py  gcn_res_onnx_wrapper.py  onnx_voxel_pool.py
deployment/pointcloud_pipeline/: CMakeLists.txt  README.md
deployment/pointcloud_pipeline/include/: FeatureBuilder.h  KnnGraphBuilder.h  PointCloudLoader.h  PointSampler.h
deployment/pointcloud_pipeline/src/: FeatureBuilder.cpp  KnnGraphBuilder.cpp  PointCloudLoader.cpp  PointSampler.cpp
deployment/postprocess/: CMakeLists.txt  README.md
deployment/postprocess/include/: CoordinateRecovery.h  ResultWriter.h  SegmentationPostProcessor.h  WeldGeometryExtractor.h
deployment/postprocess/src/: CoordinateRecovery.cpp  ResultWriter.cpp  SegmentationPostProcessor.cpp  WeldGeometryExtractor.cpp
deployment/postprocess/tests/: PostprocessFailureProbe.cpp
deployment/qt_weld_app/: CMakeLists.txt  QUICK_START.md  README.md
deployment/qt_weld_app/config/: qt_weld_app.default.ini
deployment/qt_weld_app/include/: AppConfig.h  AppStateMachine.h  ApplicationLogger.h  DetectionExportService.h  MainWindow.h  PointCloudCamera.h  PointCloudRenderData.h  PointCloudView.h  ProductInfo.h  QtWeldResultViewModel.h  RecentTaskStore.h  RuntimePackageValidator.h  ScreenshotExportService.h  SettingsDialog.h  WeldDetectionWorker.h
deployment/qt_weld_app/scripts/: launch_qt_weld_app.ps1  package_release.ps1
deployment/qt_weld_app/src/: AppConfig.cpp  AppStateMachine.cpp  ApplicationLogger.cpp  DetectionExportService.cpp  MainWindow.cpp  PointCloudCamera.cpp  PointCloudRenderData.cpp  PointCloudView.cpp  ProductInfo.cpp  QtWeldResultViewModel.cpp  RecentTaskStore.cpp  RuntimePackageValidator.cpp  ScreenshotExportService.cpp  SettingsDialog.cpp  WeldDetectionWorker.cpp  main.cpp
deployment/qt_weld_app/tests/: AppConfigTest.cpp  AppStateMachineTest.cpp  DetectionExportTest.cpp  PointCloudRenderDataTest.cpp  PointCloudViewSmokeTest.cpp  QtCloudBrowseDirectoryTest.cpp  QtLayoutResizeStabilityTest.cpp  QtSdkIntegrationSmoke.cpp  RecentTaskStoreTest.cpp  RuntimePackageSmokeTest.cpp
deployment/tensorrt_runtime/: CMakeLists.txt  README.md
deployment/tensorrt_runtime/examples/: README.md
deployment/tensorrt_runtime/include/: CudaBufferManager.h  PluginLoader.h  TensorRTInference.h
deployment/tensorrt_runtime/src/: CudaBufferManager.cpp  PluginLoader.cpp  TensorRTInference.cpp  main.cpp
deployment/tensorrt_voxel_unique_plugin_cub/: CMakeLists.txt  VoxelUniqueCubPlugin.cpp  VoxelUniqueCubPlugin.cu  VoxelUniqueCubPlugin.h  VoxelUniqueCubPluginLibrary.cpp
deployment/weld_sdk/: CMakeLists.txt  README.md
deployment/weld_sdk/include/: WeldConfig.h  WeldDetector.h  WeldResult.h  WeldStatus.h
deployment/weld_sdk/src/: WeldConfig.cpp  WeldDetector.cpp  WeldResult.cpp
deployment/weld_sdk/tests/: sdk_smoke_test.cpp  weld_sdk_testset_qualification.cpp
deployment/weld_trt_app/: CMakeLists.txt
deployment/weld_trt_app/src/: main.cpp
docs/: checkpoint_forward_validation.md  context_handoff.md  gcn_res_checkpoint_evaluation.md  gcn_res_onnx_export_validation.md  gcn_res_onnxruntime_cuda_parity.md  gcn_res_onnxruntime_cuda_validation.md  gcn_res_parity_first_divergence.md  gcn_res_standard_ops_equivalence.md  gcn_res_subdataset_smoke_training.md  local_environment_setup_result.md  local_python_environment_audit.md  model_checkpoint_input_audit.md  onnxruntime_cuda_parity_diagnosis.md  partseg_checkpoint_benchmark.md  project_quick_start.md  scatter_reduce_amax_equivalence.md  scatter_reduce_amin_equivalence.md  tensorrt_phase0_parser_build_audit.md  tensorrt_phase10a_qt_sdk_smoke.md  tensorrt_phase10b_qt_pointcloud_visualization.md  tensorrt_phase10c1_qt_layout_resize_stability.md  tensorrt_phase10c2_qt_browse_default_directory.md  tensorrt_phase10c_qt_application_productization.md  tensorrt_phase11a_release_full_testset_qualification.md  tensorrt_phase1_parser_audit.md  tensorrt_phase4_fp32_engine_build.md  tensorrt_phase5_fp32_parity.md  tensorrt_phase6_multisample_validation.md  tensorrt_phase7a_engine_preparation.md  tensorrt_phase7b_latency_benchmark.md  tensorrt_phase7c_performance_profiling.md  tensorrt_phase8a_voxelunique_optimization.md  tensorrt_phase8b_voxelunique_cub.md  tensorrt_phase8c_candidate_engine_regression.md  tensorrt_phase8d_production_baseline.md  tensorrt_phase9a_cpp_runtime.md  tensorrt_phase9b_cpp_pointcloud_pipeline.md  tensorrt_phase9c_postprocess.md  tensorrt_phase9d_weld_sdk.md  tensorrt_production_runbook.md  (+3 more)
script/: calParameters.py
scripts/: analyze_ptb0_linear1_precision.py  attribute_gcn_res_tensorrt_strict_fp32_residual_error.py  audit_constant_if_branches.py  audit_dds_reshape_unsqueeze_candidates.py  audit_dynamic_squeeze.py  audit_gcn_res_tensorrt_incremental_parser.py  audit_gcn_res_tensorrt_parser.py  audit_if_fold_equivalence.py  audit_qt_weld_sdk_dependency_boundary.py  audit_tdb_voxel_dependency.py  audit_unique_semantics.py  audit_voxelunique_dds_mapping.py  benchmark_gcn_res_pytorch_latency.py  benchmark_gcn_res_tensorrt_cub_candidate.py  benchmark_gcn_res_tensorrt_latency.py  benchmark_voxelunique_cub_plugin.py  benchmark_voxelunique_plugin.py  build_gcn_res_tensorrt_cub_candidate.py  build_gcn_res_tensorrt_fp32.py  build_validate_gcn_res_tensorrt_strict_fp32.py  compare_tensorrt_pytorch_logits.py  evaluate_all_partseg_checkpoints.py  (+42 more)
tests/tensorrt_voxel_unique_cub_correctness/: CMakeLists.txt  correctness_main.cpp  finalize_phase8b.py  generate_dynamic_custom_onnx.py  validate_torch_reference.py
(+48 files in other folders)
